<resources>
    <string name="app_name">Mox Space Invaders</string>

    <!-- OpeningMenuScreen -->
    <string name="opening_menu_title">MOX SPACE INVADERS</string>
    <string name="opening_menu_top_ranking">TOP RANKING</string>
    <string name="opening_menu_button_start_game">START NEW GAME</string>
    <string name="opening_menu_button_settings">SETTINGS</string>
    <string name="opening_menu_last_game_title">LAST GAME</string>

    <!-- Common Formats -->
    <string name="score_points_format">%1$d pts</string> <!-- Example: "123 pts" -->
    <string name="rank_number_format">%1$d.</string> <!-- Example: "1." -->
    <string name="version_format">Version %1$s</string>

    <!-- PreferencesScreen -->
    <string name="preferences_screen_title">PREFERENCES</string>
    <string name="preferences_player_name_label">PLAYER\'S NAME [%1$d/%2$d]</string>
    <string name="preferences_button_save_player_name">SAVE PLAYER NAME</string>
    <string name="preferences_button_select_backgrounds">SELECT BACKGROUNDS
(%1$d selected)</string>
    <string name="preferences_button_back_to_main_menu">BACK TO MAIN MENU</string>
    <string name="preferences_music_settings_title">MUSIC SETTINGS</string>
    <string name="preferences_music_enable_label">Enable Background Music</string>
    <string name="preferences_music_volume_label">Volume: %1$d%%</string>
    <string name="preferences_button_select_music_tracks">SELECT MUSIC TRACKS
(%1$d selected)</string>
    <string name="preferences_music_selection_dialog_title">Select Music Tracks</string>
    <string name="preferences_music_selection_none">None (no music)</string>
    <string name="preferences_music_preview_button_description">Play preview for %1$s</string>
    <string name="preferences_sfx_settings_title">SOUND EFFECTS SETTINGS</string>
    <string name="preferences_sfx_enable_label">Enable Sound Effects</string>
    <string name="preferences_sfx_volume_label">Volume: %1$d%%</string>
    <string name="preferences_button_select_player_ship">SELECT PLAYER SHIP</string>
    <string name="preferences_button_select_enemy_ship">SELECT ENEMY SHIP</string>
    <string name="preferences_button_select_mother_ship">SELECT MOTHER SHIP</string>
    <string name="ship_selection_dialog_title_player">Select Player Ship</string>
    <string name="ship_selection_dialog_title_enemy">Select Enemy Ship</string>
    <string name="ship_selection_dialog_title_mother">Select Mother Ship</string>

    <!-- Dialogs -->
    <string name="background_selection_dialog_title">Select Backgrounds</string>
    <string name="image_preview_dialog_image_not_found">Image not found</string>
    <string name="image_preview_dialog_content_description">Preview %1$s</string>
    <string name="about_dialog_title">About Mox Space Invaders</string>
    <string name="about_dialog_content">This is a Space Invaders game developed with Kotlin and Jetpack Compose.

Developed with and for Jetpack Compose, based entirely on my previous work \"Mox Memory Game\". Credits goes to me and Gemini for the constant assistance.\nGraphics, Music and effects from free online tools using IA.</string>
    <string name="copyright_notice">Copyright © %1$d %2$s. All rights reserved.</string>
    <string name="license_notice">Released under the MIT License.</string>


    <!-- Common Dialog/Button Strings -->
    <string name="dialog_click_image_to_preview">(Click image to preview)</string>
    <string name="dialog_select_deselect_all_count">Select/Deselect All (%1$d)</string>
    <string name="dialog_select_deselect_all">Select/Deselect All</string>
    <string name="dialog_item_thumbnail_description">Thumbnail %1$s</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_ok">OK</string>

    <!-- GameApp specific strings -->
    <string name="game_head_score">Score : %1$d</string>
    <string name="game_head_time">Time: %1$s</string>
    <string name="game_tail_button_reset">RESET</string>
    <string name="game_tail_button_pause">PAUSE</string>
    <string name="game_dialog_pause_image_description">Pause symbol</string>
    <string name="game_dialog_pause_exit_prompt">CLICK TO EXIT PAUSE</string>
    <string name="game_dialog_reset_image_description">Reset symbol</string>
    <string name="game_dialog_reset_title">RESET GAME</string>
    <string name="game_dialog_reset_confirmation_prompt">ARE YOU SURE?</string>
    <string name="game_dialog_won_title">CONGRATULATIONS!</string>
    <string name="game_dialog_won_subtitle">YOU WON!</string>
    <string name="game_dialog_won_score_info">Your Score: %1$d</string>
    <string name="game_dialog_won_button_main_menu">GO TO MAIN MENU</string>
    <string name="game_background_default_error_description">Default background due to error</string>
    <string name="preferences_scroll_down_indicator">Scroll
Down</string>
    <string name="game_dialog_finished_title">FINISHED!</string>
    <string name="game_dialog_finished_subtitle">GAME ENDED</string>

</resources>
